--- a/css-tut.css
+++ b/css-tut.css
@@ -6,4 +6,9 @@ canvas {
     background: #eeeeee;
     display: block;
     margin: 0 auto;
+    overflow: hidden;
+}
+
+html{
+    overflow: hidden;
 }
