--- a/css-tut.css
+++ b/css-tut.css
@@ -1,14 +1,23 @@
-head {
+*{
     margin: 0;
+    padding: 0;
+}
+
+html, head {
+    height: 100%;
+    width: 100%;
 }
 
 canvas {
-    background: #eeeeee;
+    background: #4f4f4f;
     display: block;
     margin: 0 auto;
     overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
-html{
+body, head, html{
     overflow: hidden;
 }
